# Ebilim2.0

./: .gitignore  README.md  pyproject.toml
main/: settings.py
