[tool.poetry]
name = "ebilim2-0"
version = "0.1.0"
description = ""
authors = ["hydroxygenium <orenvady@gmail.com>"]
readme = "README.md"
packages = [{include = "main"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.6"
pillow = "^9.4.0"
djangorestframework = "^3.14.0"
environs = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
